# graph_digitizer

./: .gitignore  README.md  pyproject.toml
examples/: python_api_example.py
src/plot_digitizer/: __init__.py  _legacy.py  app.py  cli.py  core.py  frontend.py
tests/: test_api_smoke.py
v_01/: graph_digitizer_01.py  graph_digitizer_02.py  graph_digitizer_03.py  graph_digitizer_04.py  graph_digitizer_05.py  graph_digitizer_06.py  ref3fig1_a_curve1.xlsx  ref3fig1_b.png~RF254e888.TMP
