[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot-digitizer-portfolio"
version = "0.1.0"
description = "Digitize curves from plot images with manual three-point calibration and a Streamlit GUI."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Roman Zhvanskiy"}]
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.8",
  "joblib>=1.3",
  "pandas>=2.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
gui = [
  "streamlit>=1.33",
  "streamlit-image-coordinates>=0.1.6",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
plot-digitizer = "plot_digitizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
